# android_external_mesa3d-rpi

./: Android.bp  meson.build
.gitlab-ci/: android-runner.sh  android-skips.txt  conditional-build-image-tags.yml  image-tags.yml
.gitlab-ci/container/: build-android-cts.sh  build-crosvm.sh  build-deqp.sh  build-vkd3d-proton.sh  build-vulkan-validation.sh
.gitlab-ci/container/debian/: gitlab-ci.yml
.gitlab-ci/container/patches/: build-deqp-android-Implement-headless-WSI-fallback-using-AImageR.patch  build-deqp-gl_Build-Don-t-build-Vulkan-utilities-for-GL-builds.patch
docs/: envvars.rst  features.txt  release-calendar.csv  relnotes.rst  u_trace.rst
docs/relnotes/: 26.1.0.rst  new_features.txt
include/android_stub/android/: log.h
src/amd/ci/: radv-navi10-fails.txt
src/amd/common/: ac_gpu_info.c  ac_gpu_info.h  ac_linux_drm.c  ac_surface.c  ac_surface.h  ac_surface_test.h
src/amd/vulkan/: meson.build  radv_acceleration_structure.c  radv_cs.h  radv_debug.h  radv_device.c  radv_device.h  radv_host_image_copy.c  radv_instance.c  radv_physical_device.c  radv_physical_device.h  radv_pipeline_graphics.c  radv_shader.h
src/asahi/compiler/: agx_nir_lower_subgroups.c
src/broadcom/compiler/: vir_to_qpu.c
src/broadcom/vulkan/: v3dv_device.c  v3dv_device.h  v3dv_limits.h  v3dv_queue.c
src/compiler/nir/: nir.c  nir.h  nir_builder.c  nir_builder.h  nir_control_flow.c  nir_deref.c  nir_divergence_analysis.c  nir_from_ssa.c  nir_functions.c  nir_gather_output_deps.c  nir_intrinsics.py  nir_legacy.c  nir_loop_analyze.c  nir_lower_flrp.c  nir_lower_io.c  nir_lower_mediump.c  nir_lower_non_uniform_access.c  nir_lower_reg_intrinsics_to_ssa.c  nir_lower_scratch.c  nir_lower_shader_calls.c  nir_lower_vec_to_regs.c  nir_move_vec_src_uses_to_dest.c  nir_opcodes.py  nir_opt_call.c  nir_opt_comparison_pre.c  nir_opt_copy_propagate.c  nir_opt_dead_cf.c  nir_opt_frag_coord_to_pixel_coord.c  nir_opt_gcm.c  nir_opt_group_loads.c  nir_opt_if.c  nir_opt_intrinsics.c  nir_opt_loop.c  nir_opt_loop_unroll.c  nir_opt_move.c  nir_opt_offsets.c  nir_opt_peephole_select.c  nir_opt_phi_precision.c  nir_opt_phi_to_bool.c  nir_opt_preamble.c  (+18 more)
src/compiler/spirv/: spirv_to_nir.c
src/freedreno/ci/: deqp-tu-android.toml  freedreno-a618-skips.txt
src/freedreno/ds/: fd_pps_a6xx.cc  fd_pps_a7xx.cc  fd_pps_driver.cc  fd_pps_driver.h  meson.build
src/freedreno/ir3/: ir3.c  ir3.h  ir3_a6xx.c  ir3_cf.c  ir3_cp.c  ir3_nir.c  ir3_nir.h  ir3_nir_analyze_ubo_ranges.c  ir3_nir_lower_64b.c  ir3_nir_lower_io_offsets.c  ir3_nir_lower_tess.c  ir3_nir_opt_preamble.c  ir3_parser.y  ir3_shared_ra.c
src/freedreno/isa/: ir3-cat6.xml
src/freedreno/vulkan/: tu_acceleration_structure.cc  tu_autotune.cc  tu_device.cc  tu_knl_drm.cc  tu_nir_lower_ray_query.cc  tu_shader.cc
src/imagination/ci/: bxs-4-64-fails.txt
src/imagination/pco/: pco_nir.c
src/imagination/vulkan/: pvr_arch_cmd_buffer.c
src/intel/compiler/: intel_nir_lower_non_uniform_resource_intel.c  intel_shader_enums.h
src/util/: 00-mesa-defaults.conf  driconf.h
src/vulkan/runtime/radix_sort/shaders/: histogram.comp  meson.build  scatter.glsl  scatter_2_even.comp  scatter_2_odd.comp
(+247 files in other folders)
